--- a/src/main/resources/templates/members/modify.html
+++ b/src/main/resources/templates/members/modify.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div layout:fragment="content" class="content">
-        <h1>내 정보 수정!</h1>
+        <h3>비밀번호 변경</h3>
         <form action="/members/modify" method="post">
             <div class="form-group has-success">
                 <label class="control-label" for="id">User ID</label>
