--- a/src/main/resources/templates/festival/write.html
+++ b/src/main/resources/templates/festival/write.html
@@ -18,26 +18,64 @@
 <body>
 <div class="container">
     <div layout:fragment="content" class="content">
-        <form action="/festival/write" method="post" enctype="multipart/form-data" th:object="${festivalDTO}">
-            <select class="form-select form-select-sm" aria-label="Small select example">
-                <option>지역을 선택 하세요</option>
-                <th:block th:if="${not #lists.isEmpty(categotys)}"  th:each="cate: ${categotys}">
-                    <option th:text="${cate}"></option>
-                </th:block>
-            </select>
-            <div>
-                <label for="title" class="form-label"></label>
-                <input class="form-control" th:field="*{title}" type="text" placeholder="제목을 입력해 주세요">
-                <p th:if="${#fields.hasErrors('title')}"    th:errors="*{title}" class="fieldError" >
-                </p>
+        <h3>축제 일정 등록</h3>
+        <form  action="/festival/write" method="post" enctype="multipart/form-data" th:object="${festivalDTO}" style="border: 3px solid lavender; padding: 20px; margin-top: 50px">
+            <div class="row" >
+                <div class="col-2">
+                    <select class="form-select form-select-sm col" aria-label="Small select example" name="category" style="border: 2px solid lavender; resize: none;">
+                        <option>지역</option>
+                        <th:block  th:each="cate: ${category}">
+                            <option th:value="${cate}" th:text="${cate.getKrName()}"></option>
+                        </th:block>
+                    </select>
+                </div>
+                <div class="col-2">
+                    <select class="form-select form-select-sm col" aria-label="Small select example" name="progress" style="border: 2px solid lavender; resize: none;">
+                        <option>진행 상태</option>
+                        <th:block  th:each="prog: ${progress}">
+                            <option th:value="${prog}" th:text="${prog.getKrName()}"></option>
+                        </th:block>
+                    </select>
+                </div>
+
             </div>
-            <div>
-                <label for="content" class="form-label"></label>
-                <input class="form-control" th:field="*{content}" type="text" PLACEHOLDER="내용을 입력해 주세요">
-                <p th:if="${#fields.hasErrors('content')}"    th:errors="*{content}" class="fieldError" >
-                </p>
+            <div class="row">
+                <div class="col-10">
+                    <label for="title" class="form-label"></label>
+                    <input class="form-control" style="width: 100%; height: 2.25em; border: 2px solid lavender; resize: none;" th:field="*{title}" type="text" placeholder="행사명을 입력해 주세요">
+                    <p th:if="${#fields.hasErrors('title')}"    th:errors="*{title}" class="fieldError" >
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-10">
+                    <label for="content" class="form-label"></label>
+                    <textarea class="form-control" style="width: 100%; height: 10.25em; border: 2px solid lavender; resize: none;"
+                              th:field="*{content}" type="text" PLACEHOLDER="행사 설명을 입력해 주세요"></textarea>
+                    <p th:if="${#fields.hasErrors('content')}"    th:errors="*{content}" class="fieldError" >
+                    </p>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-4">
+                    <label for="scheduleS">축제 시작일</label>
+                    <input id="scheduleS"style="width: 30%; border: 2px solid lavender; resize: none;" th:field="*{scheduleS}" type="date" data-placeholder="시작일">
+                    <p th:if="${#fields.hasErrors('scheduleS')}"    th:errors="*{scheduleS}" class="fieldError" >
+                    </p>
+                </div>
+                <div class="col-4">
+                    <label for="scheduleS">종료일</label>
+                    <input id="scheduleF" style="width: 30%; border: 2px solid lavender; resize: none;" th:field="*{scheduleF}" type="date" data-placeholder="종료일">
+                    <p th:if="${#fields.hasErrors('scheduleF')}"    th:errors="*{scheduleF}" class="fieldError" >
+                    </p>
+                </div>
+            </div>
+            <div class="form-inline form-group" >
+            </div>
+                <br>
                 <div th:if =  "${#lists.isEmpty(festivalDTO.faImgDTOList)}">
-                    <div class="input-group mb-3" th:each="num: ${#numbers.sequence(1,5)}">
+                    <div class="input-group mb-3" th:each="num: ${#numbers.sequence(1,3)}">
                         <input type="file" class="form-control cutom-file-input" name="fesImgFile">
                         <label class="input-group-text cutom-file-label" th:text="이미지 + ${num}">Upload</label>
                     </div>
@@ -49,7 +87,7 @@
                         <label th:for="${status.index+1}" class="input-group-text form-control-label" th:text="${not #strings.isEmpty(FAImgDTO.originName)} ? ${FAImgDTO.originName} : '이미지'" >Upload</label>
                     </div>
                 </div>
-            <button type="submit" class="btn btn-danger">전송</button>
+            <button type="submit" class="btn btn-outline-success">전송</button>
         </form>
     </div>
 
