--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -44,6 +44,9 @@
                             <li class="nav-item" sec:authorize="isAuthenticated()">
                                 <span class="nav-link active" style="color: darkblue; font-size: small" th:text="${#authentication.getName() + ' 님 환영합니다'}"></span>
                             </li>
+                            <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                                <a class="nav-link active" style="color: darkblue; font-size: small" href="/admin/memberList">회원 목록 보기</a>
+                            </li>
                             <li class="nav-item" sec:authorize="isAuthenticated()">
                                 <a class="nav-link active" aria-current="page" href="/members/read" style="color: darkgray; font-size: small">My Page</a>
                             </li>
